--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/passport": "^10.1",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "simplesoftwareio/simple-qrcode": "~2",
         "webpatser/laravel-uuid": "^4.0"
     },
     "require-dev": {
