--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=cacao
 APP_ENV=local
-APP_KEY=base64:y0LGGEOHhTVTHLUVbpeb6KXPHWHm6NVzLHZK7QSOzn0=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=i10jan
+DB_DATABASE=cacao
 DB_USERNAME=root
 DB_PASSWORD=root
 
@@ -49,3 +49,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ACCESS_TOKEN=
+OUCRC_UUID=
