--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.0",
+        "@tailwindcss/forms": "^0.4.0",
+        "@tailwindcss/line-clamp": "^0.3.0",
+        "@tailwindcss/typography": "^0.5.0",
+        "autoprefixer": "^10.4.1",
         "axios": "^0.24",
         "laravel-mix": "^6.0.39",
         "lodash": "^4.17.21",
@@ -18,7 +23,7 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.45.1",
         "sass-loader": "^12.4.0",
-        "tailwindcss": "^3.0.8",
+        "tailwindcss": "^3.0.11",
         "vue": "^2.6.14",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.14"
