Chore: GitHub Actions デプロイ

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.4",
         "doctrine/dbal": "^3.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
@@ -14,7 +14,7 @@
         "laravel/passport": "^10.1",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "simplesoftwareio/simple-qrcode": "~2",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "webpatser/laravel-uuid": "^4.0"
     },
     "require-dev": {
