--- a/.github/workflows/prod_deploy.yaml
+++ b/.github/workflows/prod_deploy.yaml
@@ -2,7 +2,7 @@ name: Build and Deploy
 on:
   push:
     branches:
-      - main
+      - production
 
 jobs:
   build:
@@ -51,7 +51,7 @@ jobs:
           REMOTE_HOST: ${{ secrets.SSH_HOST }}
           REMOTE_HOST_PORT: ${{ secrets.SSH_PORT }}
           REMOTE_USER: ${{ secrets.SSH_USER }}
-          TARGET_DIRECTORY: ${{ secrets.SSH_PATH }}
+          TARGET_DIRECTORY: ${{ secrets.SSH_PROD_PATH }}
 
       - name: Setting up Laravel Project with SSH
         uses: appleboy/ssh-action@master
@@ -61,12 +61,12 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd ${{ secrets.SSH_PATH }}
-            echo ${{ secrets.LARAVEL_ENV_DEBUG }} | base64 --decode --ignore-garbage > .env
+            cd ${{ secrets.SSH_PROD_PATH }}
+            echo ${{ secrets.LARAVEL_ENV_PROD_BASE64 }} | base64 --decode --ignore-garbage > .env
             php74cli artisan cache:clear
             php74cli artisan config:clear
             php74cli artisan config:cache
-            php74cli artisan route:cachex
+            php74cli artisan route:cache
             php74cli artisan view:clear
             php74cli artisan clear-compiled
             php74cli artisan optimize
