--- a/.github/workflows/dev_deploy.yaml
+++ b/.github/workflows/dev_deploy.yaml
@@ -66,7 +66,7 @@ jobs:
             php74cli artisan cache:clear
             php74cli artisan config:clear
             php74cli artisan config:cache
-            php74cli artisan route:cachex
+            php74cli artisan route:cache
             php74cli artisan view:clear
             php74cli artisan clear-compiled
             php74cli artisan optimize
